Stuck in edit mode after object change via animation window object lists. #48747

Closed
opened 2016-06-27 12:36:58 +02:00 by Mort · 6 comments

Windows build (likely all)
BF 277a

By switching selected object via the dope sheet, graph editor or NLA window (possibly others?) it is possible to lock the system into edit mode of a non-selected object (i.e. tab will not exit edit mode as a different object is active) with no obvious method to make the first active again (and thus allow exiting edit mode)

In a scene with at least two objects:
Enter edit mode on the first, then LMB on the name of the second in a dope sheet window, you can now no longer tab out of edit mode and are somewhat stuck.

Note:

  • The outliner does not show this behavior.
  • By using the dopesheet/outliner etc it is possible to set the first object back to active and exit edit mode.

Apologies if this has already been reported, I did a quick search but am far too busy to dig deep.

Windows build (likely all) BF 277a By switching selected object via the dope sheet, graph editor or NLA window (possibly others?) it is possible to lock the system into edit mode of a non-selected object (i.e. tab will not exit edit mode as a different object is active) with no obvious method to make the first active again (and thus allow exiting edit mode) In a scene with at least two objects: Enter edit mode on the first, then LMB on the name of the second in a dope sheet window, you can now no longer tab out of edit mode and are somewhat stuck. Note: - The outliner does not show this behavior. - By using the dopesheet/outliner etc it is possible to set the first object back to active and exit edit mode. Apologies if this has already been reported, I did a quick search but am far too busy to dig deep.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MortOOPz

Added subscriber: @MortOOPz
Author

Oh, it only locks if the second object doesn't have an edit mode (e.g. an empty).

Oh, it only locks if the second object doesn't have an edit mode (e.g. an empty).
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Joshua Leung self-assigned this 2016-06-27 15:49:10 +02:00

This issue was referenced by 7793d1d26f

This issue was referenced by 7793d1d26f28459c477f71fcd2ee662a7e14dd04
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48747
No description provided.