Fix T48747: Stuck in edit mode after selecting another object in the animation editors